--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ matrix:
   fast_finish: true
 
 install: pip install -r requirements_test.txt
-script: python manage.py test
+script: coverage run manage.py test
 after_success:
 - codecov
