--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
   fast_finish: true
 
 install: pip install -r requirements_test.txt
-script: coverage run manage.py test
+script:
+- python manage.py makemigrations
+- python manage.py migrate
+- coverage run manage.py test
 after_success:
 - codecov
